flux-and-data-migrations/kubernetes/deploy/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: python-app
  labels:
    app: python-app
spec:
  replicas: 1
  selector:
    matchLabels:
      app: python-app
  template:
    metadata:
      labels:
        app: python-app
    spec:
      containers:
      - name: python-app
        image: ghcr.io/cultura-do-caractere/python-app:0.0.1
        ports:
        - containerPort: 8000
        volumeMounts:
        - name: database-volume
          mountPath: /data
      volumes:
      - name: database-volume
        hostPath:
          path: /Users/alissonmachado/python-data
