flux-and-data-migrations/kubernetes/deploy/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: python-app
  annotations:
    nginx.ingress.kubernetes.io/rewrite-target: /$1
spec:
  ingressClassName: nginx
  rules:
  - host: python-app
    http:
      paths:
      - pathType: Prefix
        path: /(.*)
        backend:
          service:
            name: python-app-svc
            port:
              number: 8080
